--- a/About.html
+++ b/About.html
@@ -145,8 +145,8 @@
         }
 
         .image-with-text img {
-            max-width: 150px;
-            max-height: 150px;
+            max-width: 250px;
+            max-height: 250px;
             object-fit: contain;
         }
 
@@ -215,7 +215,7 @@
     <div class="content hidden" id="content1">
         <div class="image-with-text">
             <h1>Our Structure</h1>
-            <img src="path/to/goal_image.jpg" alt="Goal Image">
+            <img src="about3.png" alt="Goal Image">
         </div>
         <p>We operate at the intersection of creativity and data to craft impactful  events, compelling multimedia content,<br> and strategic marketing campaigns. This  two-pronged approach ensures our work resonates with,<br> target audiences and drives tangible  results for our clients</p>
     </div>
@@ -223,7 +223,7 @@
     <div class="content hidden" id="content2">
         <div class="image-with-text">
             <h1>Our Approach</h1>
-            <img src="path/to/approach_image.jpg" alt="Approach Image">
+            <img src="about4.png" alt="Approach Image">
         </div>
         <p>: We believe powerful storytelling is the key to forging connections and achieving results.<br> We combine strategic data analysis with captivating narratives. We're not just storytellers;<br> we're passionate creatives who translate your vision into experiences that resonate and drive results.</p>
     </div>
@@ -231,17 +231,14 @@
     <div class="content hidden" id="content3">
         <div class="image-with-text">
             <h1>Our Model</h1>
-            <img src="path/to/model_image.jpg" alt="Model Image">
+            <img src="about2.png" alt="Model Image">
         </div>
         <p>: We operate under a Management by Objectives (MBO) model. We collaboratively set clear,<br> measurable goals with our clients at the outset of each project. This ensures alignment between<br> our efforts and their desired outcomes, fostering transparency and driving results.</p>
     </div>
 
     <div class="content hidden" id="content4">
         <div class="image-with-text">
-            <h1>Human Right</h1>
-            <img src="path/to/human_right_image.jpg" alt="Human Right Image">
         </div>
-        <p>humans are big and beautiful</p>
     </div>
 
     <div class="service-section hidden" id="services">
@@ -251,36 +248,36 @@
                 <div class="main-service">Impactful Events</div>
                 <div class="arrow-down"></div>
                 <div class="dropdown">
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
+                    <p>Conferences</p>
+                    <p>Exhibitions</p>
+                    <p>Trade shows</p>
+                    <p>Networking events</p>
+                    <p>Festivals</p>
+                    <p>Launchings</p>
                 </div>
             </div>
             <div class="service" onclick="toggleDropdown(this)">
                 <div class="main-service">Compelling Content</div>
                 <div class="arrow-down"></div>
                 <div class="dropdown">
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
+                    <p>Blog</p>
+                    <p>Infographic</p>
+                    <p>Social media</p>
+                    <p>Case study</p>
+                    <p>Magazine</p>
+                    <p>Communication materials</p>
                 </div>
             </div>
             <div class="service" onclick="toggleDropdown(this)">
                 <div class="main-service">Strategic Marketing</div>
                 <div class="arrow-down"></div>
                 <div class="dropdown">
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
-                    <p>food and aid</p>
+                    <p>Social media marketing</p>
+                    <p>Content marketing</p>
+                    <p>Email marketing</p>
+                    <p>Public relations</p>
+                    <p>Print marketing</p>
+                    <p>Direct Marketing</p>
                 </div>
             </div>
         </div>
@@ -293,12 +290,13 @@
             <img src="rotaract.png" alt="Partner Image 2">
             <img src="icehawassa.png" alt="Partner Image 3">
             <img src="HAfw.png" alt="Partner Image 4">
-            <img src="gulitsacco.png" alt="Partner Image 5">
+            <img src="sacco.png" alt="Partner Image 5">
             <img src="gulitmart.png" alt="Partner Image 6">
             <img src="goldenvalley.png" alt="Partner Image 7">
-            <img src="eyakis.png" alt="Partner Image 8">
+            <img src="bigharvest.png" alt="Partner Image 8">
             <img src="asian.png" alt="Partner Image 9">
             <img src="actionlogo.png" alt="Partner Image 10">
+            <img src="velocity.png" alt="Partner Image 10">
         </div>
     </div>
 
