--- a/connect.html
+++ b/connect.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #FFFFFF;
+            background-color: #CDF2FA;
             color: #000000;
             font-family: 'Anton', sans-serif;
             margin: 0;
@@ -175,7 +175,6 @@
         <div class="left-side">
             <div class="project-header">Do you have a Project in mind?</div>
             <div class="email">service@lamonje.com</div>
-            <img src="gif.gif" alt="Small Image">
         </div>
         <div class="divider"></div>
         <div class="right-side">
