--- a/Project.html
+++ b/Project.html
@@ -152,26 +152,42 @@
 
     <!-- Example of a company section -->
     <div class="company-section">
-        <div class="company-name">Company Name 1</div>
+        <div class="Action Aid ETHIOPIA"><h1>Action Aid ETHIOPIA</h1></div>
         <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image 1">
-            <img src="company1_image2.jpg" alt="Project Image 2">
-            <img src="company1_image3.jpg" alt="Project Image 3">
-            <img src="company1_image4.jpg" alt="Project Image 4">
-            <img src="company1_image5.jpg" alt="Project Image 5">
-            <img src="company1_image6.jpg" alt="Project Image 6">
-            <img src="company1_image7.jpg" alt="Project Image 7">
-            <img src="company1_image8.jpg" alt="Project Image 8">
+            <img src="aid.png" alt="Project Image 1">
+            <img src="aid2.jpg" alt="Project Image 2">
+            <img src="aid4.jpg" alt="Project Image 3">
+            <img src="aid5.png" alt="Project Image 4">
+            <img src="aid6.jpg" alt="Project Image 5">
+            <img src="aid7.png" alt="Project Image 6">
+            <img src="aid8.png" alt="Project Image 7">
+            <img src="aid9.png" alt="Project Image 8">
         </div>
         <div class="project-description">
-            Description of the project for Company Name 1 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
+            <h2>what we did</h2><br>
+            - Strategic design consultation<br>
+- Branding guidance<br>
+- Development of communication materials (Magazine, newsletters, website content, social media posts, Annual Report)<br>
+- Ensuring brand alignment<br>
+            <br>
+            <br>
+             <h2>Collaboration and Expertise</h2><br>
+La Monje partnered with AAE to leverage our expertise in communication design and
+branding. We co-created high-quality communication materials that effectively amplify AAE's
+work and drive positive change. Our team provided strategic guidance and collaborated
+closely with AAE to ensure all materials aligned with their communication and branding
+guidelines<br>
+<h2>Success and Value</h2><br>
+By delivering high-quality communication products on time and within budget, La Monje
+empowered AAE to achieve their communication goals. Our work not only promoted AAE's
+vital work but also strengthened its brand identity and reputation.
         </div>
     </div>
 
     <!-- Repeat the company section for each company -->
     <!-- Example of another company section -->
     <div class="company-section">
-        <div class="company-name">Company Name 2</div>
+        <div class="PEP & MCF, Industry"><h1>PEP & MCF, Industry</h1></div>
         <div class="company-images">
             <img src="company2_image1.jpg" alt="Project Image 1">
             <img src="company2_image2.jpg" alt="Project Image 2">
@@ -183,10 +199,162 @@
             <img src="company2_image8.jpg" alt="Project Image 8">
         </div>
         <div class="project-description">
-            Description of the project for Company Name 2 goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac magna vehicula, fermentum ex ac, commodo augue.
+                        <h2>what we did</h2><br>
+- Event facilitation: training, workshops, panel discussions, research presentations<br>
+- Designed printed marketing materials<br>
+- Distributed daily subsistence allowance<br>
+- Booked mainstream media coverage<br>
+- Executed direct marketing campaigns<br>
+- Managed public relations efforts<br>
+<br>
+            <br>
+             <h2>Building Bridges for Youth Employment:</h2><br>
+La Monje was entrusted by PEP and MCF to translate their research on youth employability
+in Ethiopia into action. Through a series of impactful events (training, workshops, panel
+discussions, research presentations), we fostered collaboration and knowledge sharing
+among stakeholders<br>
+            <h2>Amplifying Research Impact:</h2><br>
+Our strategic event design and execution for PEP and MCF's youth employability project
+ensured maximum reach and impact. Beyond event management, we provided
+comprehensive support, including designing marketing materials, managing logistics
+(subsistence allowances, media bookings), and executing direct marketing and PR efforts
         </div>
     </div>
-    <!-- Repeat the above company section for each company -->
+
+     <!-- Example of a company section -->
+    <div class="company-section">
+        <div class="Hub of African’s Fashion Week (HAFW)"><h1>Hub of African’s Fashion Week (HAFW)</h1></div>
+        <div class="company-images">
+            <img src="company1_image1.jpg" alt="Project Image 1">
+            <img src="company1_image2.jpg" alt="Project Image 2">
+            <img src="company1_image3.jpg" alt="Project Image 3">
+            <img src="company1_image4.jpg" alt="Project Image 4">
+            <img src="company1_image5.jpg" alt="Project Image 5">
+            <img src="company1_image6.jpg" alt="Project Image 6">
+            <img src="company1_image7.jpg" alt="Project Image 7">
+            <img src="company1_image8.jpg" alt="Project Image 8">
+        </div>
+        <div class="project-description">
+                                    <h2>what we did</h2><br>
+- Impact Analysis<br>
+- Venue Design<br>
+- Staffing Solutions<br>
+- Comprehensive Reporting (Daily Summaries, Sponsorship Insights, Social Media
+Analysis, Actionable Recommendations)<br>
+            <br>
+            <br>
+             <h2>Collaborative Success</h2><br>
+La Monje partnered with the Hub of African Fashion Week (HAFW) to deliver a high-impact,
+week-long celebration of African fashion. Our collaborative approach ensured a successful
+event that exceeded expectations<br>
+             <h2>Actionable Insights</h2><br>
+Following the event, La Monje provided a comprehensive report that included daily
+summaries, sponsorship insights, social media analysis, and actionable recommendations.
+This valuable data empowers HAFW to optimize future events.
+        </div>
+    </div>
+
+     <!-- Example of a company section -->
+    <div class="company-section">
+        <div class="PSY Addis"><h1>PSY Addis</h1></div>
+        <div class="company-images">
+            <img src="company1_image1.jpg" alt="Project Image 1">
+            <img src="company1_image2.jpg" alt="Project Image 2">
+            <img src="company1_image3.jpg" alt="Project Image 3">
+            <img src="company1_image4.jpg" alt="Project Image 4">
+            <img src="company1_image5.jpg" alt="Project Image 5">
+            <img src="company1_image6.jpg" alt="Project Image 6">
+            <img src="company1_image7.jpg" alt="Project Image 7">
+            <img src="company1_image8.jpg" alt="Project Image 8">
+        </div>
+        <div class="project-description">
+                                    <h2>what we did</h2><br>
+- Curated the overall festival experience<br>
+- Managed marketing efforts to build a thriving community<br>
+- Oversaw ticket sales to ensure a successful event<br>
+            <br>
+            <br>
+            <h2>Collaboration & Impact</h2><br>
+La Monje co-organized PSY Addis, a pulsating monthly music festival in Addis Ababa,
+alongside Aslan Business Group. This project fostered a thriving community around music,
+nature, and connection through psychedelic and electronic beats.<br>
+<h2>Strategic Expertise</h2><br>
+Our contribution to PSY Addis spanned experience curation, marketing campaign
+management, and ticket sales oversight. We ensured a successful and vibrant gathering for
+music enthusiasts in Addis Ababa.<br>
+<h2>Community Building</h2><br>
+PSY Addis, co-organized by La Monje, is more than just a music festival. It's a vibrant
+community built around nature, adventure, and meaningful connections fostered by
+psychedelic and electronic music
+        </div>
+    </div>
+
+     <!-- Example of a company section -->
+    <div class="company-section">
+        <div class="Mignot bazaar"><h1>Mignot bazaar</h1></div>
+        <div class="company-images">
+            <img src="company1_image1.jpg" alt="Project Image 1">
+            <img src="company1_image2.jpg" alt="Project Image 2">
+            <img src="company1_image3.jpg" alt="Project Image 3">
+            <img src="company1_image4.jpg" alt="Project Image 4">
+            <img src="company1_image5.jpg" alt="Project Image 5">
+            <img src="company1_image6.jpg" alt="Project Image 6">
+            <img src="company1_image7.jpg" alt="Project Image 7">
+            <img src="company1_image8.jpg" alt="Project Image 8">
+        </div>
+        <div class="project-description">
+                                    <h2>what we did</h2><br>
+- Event Facilitation & Management<br>
+- Sponsorship Acquisition<br>
+- Vendor Registration<br>
+- Social Media & Marketing Content Creation<br>
+- Event Day Photography & Videography<br>
+- Email Marketing & Direct Marketing<br>
+            <br>
+            <br>
+             <h2>Focus on Client Impact</h2><br>
+La Monje partnered with Eykis Entertainment to create Mignot Bazaar, a monthly event
+series. This dynamic marketplace provides a platform for business owners to showcase their
+products, connect with customers, and drive sales.<br>
+<h2>Focus on Services Offered</h2><br>
+La Monje played a key role in the success of Mignot Bazaar. We provided a comprehensive
+suite of services, including event facilitation and management, sponsorship acquisition,
+vendor registration, social media and marketing content creation, event day photography
+and videography, and email and direct marketing campaigns.
+        </div>
+    </div>
+
+     <!-- Example of a company section -->
+    <div class="company-section">
+        <div  class="Look up"><h1>Look up</h1> </div>
+        <div class="company-images">
+            <img src="company1_image1.jpg" alt="Project Image 1">
+            <img src="company1_image2.jpg" alt="Project Image 2">
+            <img src="company1_image3.jpg" alt="Project Image 3">
+            <img src="company1_image4.jpg" alt="Project Image 4">
+            <img src="company1_image5.jpg" alt="Project Image 5">
+            <img src="company1_image6.jpg" alt="Project Image 6">
+            <img src="company1_image7.jpg" alt="Project Image 7">
+            <img src="company1_image8.jpg" alt="Project Image 8">
+        </div>
+        <div class="project-description">
+                                    <h2>what we did</h2><br>
+- Designed and implemented the LookUp event series<br>
+- Developed a creative marketing strategy<br>
+- Curated and managed social media marketing<br>
+- Managed printed media marketing<br>
+            <br>
+            <br>
+            <h2>Community Building:</h2><br>
+LookUp, a La Monje creation, is a thriving monthly event series in Hawassa, Ethiopia.
+Designed to foster connections and collaboration, LookUp brings together ambitious
+entrepreneurs for networking, idea exchange, and a platform to showcase their talents.<br>
+            <h2>Targeting Ambitious Professionals:</h2><br>
+Are you an entrepreneur seeking a supportive network and creative space? LookUp,
+designed and facilitated by La Monje, is your answer. This Hawassa-based event series
+offers a monthly platform for connection, marketplace exposure, and talent discovery
+        </div>
+    </div>
 
     <script>
         window.addEventListener('load', () => {
