--- a/Project.html
+++ b/Project.html
@@ -136,6 +136,16 @@
             .project-description {
                 font-size: 16px;
             }
+
+            .company-images {
+                grid-template-columns: repeat(2, 1fr); /* 2 images per row */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .company-images {
+                grid-template-columns: 1fr; /* 1 image per row */
+            }
         }
     </style>
 </head>
@@ -152,7 +162,7 @@
 
     <!-- Example of a company section -->
     <div class="company-section">
-        <div class="Action Aid ETHIOPIA"><h1>Action Aid ETHIOPIA</h1></div>
+        <div class="company-name">Action Aid ETHIOPIA</div>
         <div class="company-images">
             <img src="aid.png" alt="Project Image 1">
             <img src="aid2.jpg" alt="Project Image 2">
@@ -164,30 +174,23 @@
             <img src="aid9.png" alt="Project Image 8">
         </div>
         <div class="project-description">
-            <h2>what we did</h2><br>
-            - Strategic design consultation<br>
-- Branding guidance<br>
-- Development of communication materials (Magazine, newsletters, website content, social media posts, Annual Report)<br>
-- Ensuring brand alignment<br>
-            <br>
-            <br>
-             <h2>Collaboration and Expertise</h2><br>
-La Monje partnered with AAE to leverage our expertise in communication design and
-branding. We co-created high-quality communication materials that effectively amplify AAE's
-work and drive positive change. Our team provided strategic guidance and collaborated
-closely with AAE to ensure all materials aligned with their communication and branding
-guidelines<br>
-<h2>Success and Value</h2><br>
-By delivering high-quality communication products on time and within budget, La Monje
-empowered AAE to achieve their communication goals. Our work not only promoted AAE's
-vital work but also strengthened its brand identity and reputation.
+            <h2>What We Did</h2>
+            <ul>
+                <li>Strategic design consultation</li>
+                <li>Branding guidance</li>
+                <li>Development of communication materials (Magazine, newsletters, website content, social media posts, Annual Report)</li>
+                <li>Ensuring brand alignment</li>
+            </ul>
+            <h2>Collaboration and Expertise</h2>
+            <p>La Monje partnered with AAE to leverage our expertise in communication design and branding. We co-created high-quality communication materials that effectively amplify AAE's work and drive positive change. Our team provided strategic guidance and collaborated closely with AAE to ensure all materials aligned with their communication and branding guidelines.</p>
+            <h2>Success and Value</h2>
+            <p>By delivering high-quality communication products on time and within budget, La Monje empowered AAE to achieve their communication goals. Our work not only promoted AAE's vital work but also strengthened its brand identity and reputation.</p>
         </div>
     </div>
 
     <!-- Repeat the company section for each company -->
-    <!-- Example of another company section -->
     <div class="company-section">
-        <div class="PEP & MCF, Industry"><h1>PEP & MCF, Industry</h1></div>
+        <div class="company-name">PEP & MCF, Industry</div>
         <div class="company-images">
             <img src="company2_image1.jpg" alt="Project Image 1">
             <img src="company2_image2.jpg" alt="Project Image 2">
@@ -199,31 +202,25 @@ vital work but also strengthened its brand identity and reputation.
             <img src="company2_image8.jpg" alt="Project Image 8">
         </div>
         <div class="project-description">
-                        <h2>what we did</h2><br>
-- Event facilitation: training, workshops, panel discussions, research presentations<br>
-- Designed printed marketing materials<br>
-- Distributed daily subsistence allowance<br>
-- Booked mainstream media coverage<br>
-- Executed direct marketing campaigns<br>
-- Managed public relations efforts<br>
-<br>
-            <br>
-             <h2>Building Bridges for Youth Employment:</h2><br>
-La Monje was entrusted by PEP and MCF to translate their research on youth employability
-in Ethiopia into action. Through a series of impactful events (training, workshops, panel
-discussions, research presentations), we fostered collaboration and knowledge sharing
-among stakeholders<br>
-            <h2>Amplifying Research Impact:</h2><br>
-Our strategic event design and execution for PEP and MCF's youth employability project
-ensured maximum reach and impact. Beyond event management, we provided
-comprehensive support, including designing marketing materials, managing logistics
-(subsistence allowances, media bookings), and executing direct marketing and PR efforts
+            <h2>What We Did</h2>
+            <ul>
+                <li>Event facilitation: training, workshops, panel discussions, research presentations</li>
+                <li>Designed printed marketing materials</li>
+                <li>Distributed daily subsistence allowance</li>
+                <li>Booked mainstream media coverage</li>
+                <li>Executed direct marketing campaigns</li>
+                <li>Managed public relations efforts</li>
+            </ul>
+            <h2>Building Bridges for Youth Employment</h2>
+            <p>La Monje was entrusted by PEP and MCF to translate their research on youth employability in Ethiopia into action. Through a series of impactful events (training, workshops, panel discussions, research presentations), we fostered collaboration and knowledge sharing among stakeholders.</p>
+            <h2>Amplifying Research Impact</h2>
+            <p>Our strategic event design and execution for PEP and MCF's youth employability project ensured maximum reach and impact. Beyond event management, we provided comprehensive support, including designing marketing materials, managing logistics (subsistence allowances, media bookings), and executing direct marketing and PR efforts.</p>
         </div>
     </div>
 
-     <!-- Example of a company section -->
+    <!-- Example of another company section -->
     <div class="company-section">
-        <div class="Hub of African’s Fashion Week (HAFW)"><h1>Hub of African’s Fashion Week (HAFW)</h1></div>
+        <div class="company-name">Hub of African’s Fashion Week (HAFW)</div>
         <div class="company-images">
             <img src="company1_image1.jpg" alt="Project Image 1">
             <img src="company1_image2.jpg" alt="Project Image 2">
@@ -235,26 +232,22 @@ comprehensive support, including designing marketing materials, managing logisti
             <img src="company1_image8.jpg" alt="Project Image 8">
         </div>
         <div class="project-description">
-                                    <h2>what we did</h2><br>
-- Impact Analysis<br>
-- Venue Design<br>
-- Staffing Solutions<br>
-- Comprehensive Reporting (Daily Summaries, Sponsorship Insights, Social Media
-Analysis, Actionable Recommendations)<br>
-            <br>
-            <br>
-             <h2>Collaborative Success</h2><br>
-La Monje partnered with the Hub of African Fashion Week (HAFW) to deliver a high-impact,
-week-long celebration of African fashion. Our collaborative approach ensured a successful
-event that exceeded expectations<br>
-             <h2>Actionable Insights</h2><br>
-Following the event, La Monje provided a comprehensive report that included daily
-summaries, sponsorship insights, social media analysis, and actionable recommendations.
-This valuable data empowers HAFW to optimize future events.
+            <h2>What We Did</h2>
+            <ul>
+                <li>Developed HAFW's brand identity, event concept, and visual identity</li>
+                <li>Produced promotional materials (flyers, posters, banners)</li>
+                <li>Managed event logistics (venue selection, set design, schedule planning)</li>
+                <li>Executed successful social media campaigns and media coverage</li>
+                <li>Facilitated partnerships with local and international stakeholders</li>
+            </ul>
+            <h2>Elevating African Fashion on a Global Stage</h2>
+            <p>La Monje's creative team crafted a compelling visual identity and brand for HAFW. Our expertise in event management ensured a seamless experience, from venue selection and set design to schedule planning. We amplified HAFW's reach through targeted social media campaigns and media coverage.</p>
+            <h2>Creating Lasting Impressions</h2>
+            <p>HAFW's success is a testament to our collaborative approach and dedication to excellence. Our work not only highlighted African fashion's rich diversity but also fostered meaningful partnerships and connections within the industry.</p>
         </div>
     </div>
 
-     <!-- Example of a company section -->
+    <!-- Example of another company section -->
     <div class="company-section">
         <div class="PSY Addis"><h1>PSY Addis</h1></div>
         <div class="company-images">
@@ -356,8 +349,20 @@ offers a monthly platform for connection, marketplace exposure, and talent disco
         </div>
     </div>
 
+    <!-- Repeat as needed for other companies -->
+
+    <div class="footer">
+        <p>© 2024 LaMonje. All rights reserved.</p>
+        <p>
+            <a href="home.html">Home</a> |
+            <a href="projects.html">Projects</a> |
+            <a href="about.html">About</a> |
+            <a href="connect.html">Connect</a>
+        </p>
+    </div>
+
     <script>
-        window.addEventListener('load', () => {
+        window.addEventListener('load', function() {
             document.body.classList.add('loaded');
         });
     </script>
