--- a/Project.html
+++ b/Project.html
@@ -222,14 +222,14 @@
     <div class="company-section">
         <div class="company-name">Hub of African’s Fashion Week (HAFW)</div>
         <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image 1">
-            <img src="company1_image2.jpg" alt="Project Image 2">
-            <img src="company1_image3.jpg" alt="Project Image 3">
-            <img src="company1_image4.jpg" alt="Project Image 4">
-            <img src="company1_image5.jpg" alt="Project Image 5">
-            <img src="company1_image6.jpg" alt="Project Image 6">
-            <img src="company1_image7.jpg" alt="Project Image 7">
-            <img src="company1_image8.jpg" alt="Project Image 8">
+            <img src="hub1.png" alt="Project Image 1">
+            <img src="hub2.png" alt="Project Image 2">
+            <img src="hub3.png" alt="Project Image 3">
+            <img src="hub4.png" alt="Project Image 4">
+            <img src="hub5.png" alt="Project Image 5">
+            <img src="hub6.png" alt="Project Image 6">
+            <img src="hub7.png" alt="Project Image 7">
+            <img src="hub8.png" alt="Project Image 8">
         </div>
         <div class="project-description">
             <h2>What We Did</h2>
@@ -286,14 +286,14 @@ psychedelic and electronic music
     <div class="company-section">
         <div class="Mignot bazaar"><h1>Mignot bazaar</h1></div>
         <div class="company-images">
-            <img src="company1_image1.jpg" alt="Project Image 1">
-            <img src="company1_image2.jpg" alt="Project Image 2">
-            <img src="company1_image3.jpg" alt="Project Image 3">
-            <img src="company1_image4.jpg" alt="Project Image 4">
-            <img src="company1_image5.jpg" alt="Project Image 5">
-            <img src="company1_image6.jpg" alt="Project Image 6">
-            <img src="company1_image7.jpg" alt="Project Image 7">
-            <img src="company1_image8.jpg" alt="Project Image 8">
+            <img src="bazaar1.png" alt="Project Image 1">
+            <img src="bazaar2.png" alt="Project Image 2">
+            <img src="bazaar3.png" alt="Project Image 3">
+            <img src="bazaar4.png" alt="Project Image 4">
+            <img src="bazaar5.png" alt="Project Image 5">
+            <img src="bazaar6.png" alt="Project Image 6">
+            <img src="bazaar7.png" alt="Project Image 7">
+            <img src="bazaar8.png" alt="Project Image 8">
         </div>
         <div class="project-description">
                                     <h2>what we did</h2><br>
