--- a/Project.html
+++ b/Project.html
@@ -83,13 +83,13 @@
         }
 
         .company-images img {
-            width: 100%;
-            height: auto;
-            max-width: 100%; /* Ensure images do not exceed container width */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); /* Light shadow effect */
-            transition: transform 0.3s ease;
-        }
+    width: 300px;
+    height: 300px;
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); /* Light shadow effect */
+    transition: transform 0.3s ease;
+}
+
 
         .company-images img:hover {
             transform: scale(1.05); /* Slightly increased scale on hover */
@@ -154,7 +154,7 @@
             .image-block {
                 margin-right: 10px; /* Adjust spacing between images */
             }
-       
+
     </style>
 </head>
 <body>
