--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #caf0f8;
+            background-color: #000000;
             color: #FB8500;
             font-family: 'Anton', sans-serif;
             margin: 0;
@@ -22,6 +22,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
+            background: transparent;
         }
 
         .navbar a {
@@ -32,7 +33,7 @@
         }
 
         .navbar a:hover {
-            color: #fff;
+            color: #ffffff;
         }
 
         .image-container {
@@ -58,11 +59,11 @@
 
         .image-block img:hover {
             transform: scale(0.95);
-            filter: brightness(1.2);
+            filter: brightness(0.5);
         }
 
         .image-block .image-caption {
-            color: #000000;
+            color: #ffffff;
             margin-top: 10px;
         }
 
@@ -101,7 +102,7 @@
         .paragraph {
             text-align: center;
             margin: 50px 20px;
-            color: #000000;
+            color: #ffffff;
         }
 
         .footer {
@@ -147,7 +148,7 @@
             }
 
             .main-text {
-                font-size: 70px;
+                font-size: 30px;
             }
 
             .navbar a {
@@ -162,40 +163,181 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">About</a>
-        <a href="#">Connect</a>
+        <a href="home.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="about.html">About</a>
+        <a href="connect.html">Connect</a>
     </div>
+
     <div class="image-container">
         <div class="image-block">
-            <img src="hawf.png" alt="Image 1">
+            <img src="hawfi.png" alt="Image 1">
             <div class="image-caption">HAWF</div>
         </div>
         <div class="image-block">
-            <img src="look.png" alt="Image 2">
+            <img src="look2.png" alt="Image 2">
             <div class="image-caption">Look Up</div>
         </div>
         <div class="image-block">
-            <img src="pcf.png" alt="Image 3">
-            <div class="image-caption">PCF EDC</div>
+            <img src="pep3.png" alt="Image 3">
+            <div class="image-caption">PEP MCF</div>
         </div>
         <div class="image-block">
             <img src="aid.png" alt="Image 4">
             <div class="image-caption">Action Aid Ethiopia</div>
         </div>
     </div>
-    <div class="main-text">
+    <div class="main-text" id="home">
         L A M O N J E
     </div>
     <div class="center-image">
         <img src="lamonjelogo1.png" alt="Center Image">
     </div>
-    <div class="paragraph">
+    <div class="paragraph" id="projects">
         <p>Our clients entrust us with complex tasks of bringing their stories to life. <br>They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
     </div>
     <div class="footer">
-        <a href="#">Look at our projects <span class="arrow">→</span></a>
+        <a href="#projects">Look at our projects <span class="arrow">→</span></a>
     </div>
+   <div class="footer">
+    <div class="footer-bar">
+        <img src="lamonjelogo1.png" alt="Footer Logo" class="footer-logo">
+        <div class="footer-section">
+            <p>Hawassa</p>
+            <p>Addis Abeba</p>
+            <p>Kigali</p>
+        </div>
+        <div class="footer-section">
+            <a href="about.html">About</a>
+            <a href="projects.html">Company details</a>
+        </div>
+        <div class="footer-section">
+            <a href="#" onclick="showInfo('privacy')">Privacy</a>
+            <a href="#" onclick="showInfo('advertising')">Advertisement terms and conditions</a>
+            <a href="#" onclick="showInfo('cookie')">Cookie policy</a>
+        </div>
+        <div class="footer-section">
+            <p>Socials</p>
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+        </div>
+    </div>
+    <div id="info-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeInfo()">&times;</span>
+            <div id="info-text"></div>
+        </div>
+    </div>
+</div>
+
+<style>
+    .footer-bar {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #000000;
+        color: #FB8500;
+        padding: 20px 0;
+        border-top: 1px solid #FB8500;
+        flex-wrap: wrap;
+    }
+
+    .footer-logo {
+        width: 100px;
+        height: auto;
+    }
+
+    .footer-section {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 15px;
+    }
+
+    .footer-section a, .footer-section p {
+        color: #ffffff;
+        text-decoration: none;
+        margin: 5px 0;
+        transition: color 0.3s ease;
+    }
+
+    .footer-section a:hover, .footer-section p:hover {
+        color: #ffffff;
+    }
+
+    .footer-section p {
+        margin: 5px 0;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover, .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+        .footer-bar {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-logo {
+            margin-bottom: 15px;
+        }
+
+        .footer-section {
+            margin: 10px 0;
+        }
+    }
+</style>
+
+<script>
+    function showInfo(type) {
+        var infoText = '';
+        if (type === 'privacy') {
+            infoText = 'Privacy Policy: This policy explains how we handle your personal data...';
+        } else if (type === 'advertising') {
+            infoText = 'Advertisement Terms and Conditions: These terms outline how we manage advertising...';
+        } else if (type === 'cookie') {
+            infoText = 'Cookie Policy: This policy describes how we use cookies on our website...';
+        }
+        document.getElementById('info-text').innerHTML = infoText;
+        document.getElementById('info-modal').style.display = 'block';
+    }
+
+    function closeInfo() {
+        document.getElementById('info-modal').style.display = 'none';
+    }
+</script>
+
 </body>
 </html>
+
+       
