--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,16 +39,21 @@
 
         .image-container {
             display: flex;
-            justify-content: flex-start; /* Start images from left on desktop */
-            overflow-x: auto; /* Allow horizontal scrolling */
+            justify-content: flex-start;
+            /* Start images from left on desktop */
+            overflow-x: auto;
+            /* Allow horizontal scrolling */
             margin: 20px 0;
-            padding: 10px; /* Add padding to prevent edge clipping */
-            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+            padding: 10px;
+            /* Add padding to prevent edge clipping */
+            -webkit-overflow-scrolling: touch;
+            /* Smooth scrolling on iOS */
         }
 
         .image-block {
             text-align: center;
-            margin-right: 20px; /* Add spacing between images */
+            margin-right: 20px;
+            /* Add spacing between images */
         }
 
         .image-block img {
@@ -68,10 +74,10 @@
         }
 
         .main-text {
-            font-size: 150px;
+            font-size: 200px;
             text-align: center;
             margin: 50px 0;
-            color: #000000;
+            color: #ffffff;
             letter-spacing: 15px;
         }
 
@@ -83,6 +89,7 @@
             0% {
                 transform: rotateX(0);
             }
+
             100% {
                 transform: rotateX(360deg);
             }
@@ -135,16 +142,23 @@
 
         @media (max-width: 768px) {
             .image-container {
-                flex-direction: row; /* Display images in a row */
-                justify-content: flex-start; /* Start images from left */
-                padding: 0; /* Remove padding for mobile */
-                overflow-x: auto; /* Allow horizontal scrolling */
-                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
-                -ms-overflow-style: -ms-autohiding-scrollbar; /* Hide scrollbar on Edge */
+                flex-direction: row;
+                /* Display images in a row */
+                justify-content: flex-start;
+                /* Start images from left */
+                padding: 0;
+                /* Remove padding for mobile */
+                overflow-x: auto;
+                /* Allow horizontal scrolling */
+                -webkit-overflow-scrolling: touch;
+                /* Smooth scrolling on iOS */
+                -ms-overflow-style: -ms-autohiding-scrollbar;
+                /* Hide scrollbar on Edge */
             }
 
             .image-block {
-                margin-right: 10px; /* Adjust spacing between images */
+                margin-right: 10px;
+                /* Adjust spacing between images */
             }
 
             .main-text {
@@ -156,11 +170,13 @@
             }
 
             .paragraph {
-                margin: 30px 20px; /* Adjust margin for paragraph */
+                margin: 30px 20px;
+                /* Adjust margin for paragraph */
             }
         }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <a href="home.html">Home</a>
@@ -194,132 +210,137 @@
         <img src="lamonjelogo1.png" alt="Center Image">
     </div>
     <div class="paragraph" id="projects">
-        <p>Our clients entrust us with complex tasks of bringing their stories to life. <br>They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.</p>
+        <p>Our clients entrust us with complex tasks of bringing their stories to life.
+            <br>They understand the power of a well-crafted narrative and trust our expertise<br> to navigate the complexities of storytelling across events, content creation, and strategic marketing.
+        </p>
     </div>
     <div class="footer">
         <a href="#projects">Look at our projects <span class="arrow">→</span></a>
     </div>
-   <div class="footer">
-    <div class="footer-bar">
-        <img src="lamonjelogo1.png" alt="Footer Logo" class="footer-logo">
-        <div class="footer-section">
-            <p>Hawassa</p>
-            <p>Addis Abeba</p>
-            <p>Kigali</p>
+    <div class="footer">
+        <div class="footer-bar">
+            <img src="lamonjelogo1.png" alt="Footer Logo" class="footer-logo">
+            <div class="footer-section">
+                <p>Hawassa</p>
+                <p>Addis Abeba</p>
+                <p>Kigali</p>
+            </div>
+            <div class="footer-section">
+                <a href="about.html">About</a>
+                <a href="projects.html">Company details</a>
+            </div>
+            <div class="footer-section">
+                <a href="#" onclick="showInfo('privacy')">Privacy</a>
+                <a href="#" onclick="showInfo('advertising')">Advertisement terms and conditions</a>
+                <a href="#" onclick="showInfo('cookie')">Cookie policy</a>
+            </div>
+            <div class="footer-section">
+                <p>Socials</p>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            </div>
         </div>
-        <div class="footer-section">
-            <a href="about.html">About</a>
-            <a href="projects.html">Company details</a>
-        </div>
-        <div class="footer-section">
-            <a href="#" onclick="showInfo('privacy')">Privacy</a>
-            <a href="#" onclick="showInfo('advertising')">Advertisement terms and conditions</a>
-            <a href="#" onclick="showInfo('cookie')">Cookie policy</a>
-        </div>
-        <div class="footer-section">
-            <p>Socials</p>
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+        <div id="info-modal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeInfo()">&times;</span>
+                <div id="info-text"></div>
+            </div>
         </div>
     </div>
-    <div id="info-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeInfo()">&times;</span>
-            <div id="info-text"></div>
-        </div>
-    </div>
-</div>
 
-<style>
-    .footer-bar {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        background-color: #000000;
-        color: #FB8500;
-        padding: 20px 0;
-        border-top: 1px solid #FB8500;
-        flex-wrap: wrap;
-    }
-
-    .footer-logo {
-        width: 100px;
-        height: auto;
-    }
-
-    .footer-section {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin: 15px;
-    }
-
-    .footer-section a, .footer-section p {
-        color: #ffffff;
-        text-decoration: none;
-        margin: 5px 0;
-        transition: color 0.3s ease;
-    }
-
-    .footer-section a:hover, .footer-section p:hover {
-        color: #ffffff;
-    }
-
-    .footer-section p {
-        margin: 5px 0;
-    }
-
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-    }
-
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-
-    .close:hover, .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-    @media (max-width: 768px) {
+    <style>
         .footer-bar {
-            flex-direction: column;
+            display: flex;
+            justify-content: space-around;
             align-items: center;
+            background-color: #000000;
+            color: #FB8500;
+            padding: 20px 0;
+            border-top: 1px solid #FB8500;
+            flex-wrap: wrap;
         }
 
         .footer-logo {
-            margin-bottom: 15px;
+            width: 100px;
+            height: auto;
         }
 
         .footer-section {
-            margin: 10px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin: 15px;
         }
-    }
-</style>
 
-<script>
-    function showInfo(type) {
+        .footer-section a,
+        .footer-section p {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 5px 0;
+            transition: color 0.3s ease;
+        }
+
+        .footer-section a:hover,
+        .footer-section p:hover {
+            color: #ffffff;
+        }
+
+        .footer-section p {
+            margin: 5px 0;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        @media (max-width: 768px) {
+            .footer-bar {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .footer-logo {
+                margin-bottom: 15px;
+            }
+
+            .footer-section {
+                margin: 10px 0;
+            }
+        }
+    </style>
+
+    <script>
+        function showInfo(type) {
         var infoText = '';
         if (type === 'privacy') {
             infoText = 'Privacy Policy: This policy explains how we handle your personal data...';
@@ -335,9 +356,8 @@
     function closeInfo() {
         document.getElementById('info-modal').style.display = 'none';
     }
-</script>
+    </script>
 
 </body>
-</html>
 
-       
+</html>
